- [Bugfix] Determine changed files based on modification date when synchronizing
- [Bugfix] Opening an URL linking to a file opens a browser window
- [Bugfix] Changing the username of a newly created bookmark of a connected server might affect an existing bookmark of the same server but with a different username.
- [Bugfix] Logging the response of 'LIST' (FTP)
- [Bugfix] Don't write PASS to transcript (FTP)

2.4b1
- [Feature] Synchronization of files
- [Feature] Create new files on server
- [Feature] Support for Novell Netware file listings (FTP)
- [Feature] Growl notification support (see http://growl.info)
- [Feature] Limit number of concurrent connections to a remote host 
- [Feature] Move remote files with copy & paste
- [Feature] Select a file in the browser by typing its first character
- [Feature] Put remote files into the transfer queue with copy & paste
- [Feature] Apply permissions recursively
- [Feature] Option to apply default permissions to transferred files in Preferences
- [Feature] Option to preserve modification date on download in Preferences
- [Feature] Switch encoding per browser with menu or toolbar item
- [Feature] Switch 'Show hidden files' per browser with menu or toolbar item
- [Feature] Transfer Queue with "Aqua" progress indicator
- [Feature] Provide a proxy icon for the connection in the window title bar
- [Feature] The proxy icon in the window title bar can then be dragged to the bookmark drawer or the Finder.
- [Feature] Bookmarks of recently connected hosts are saved in ~/Library/Application Support/Cyberduck/History 
- [Feature] Updated toolbar icons (Thanks to Matt Ball)
- [Feature] Display the number of files in the browser 
- [Feature] Added TextMate to the list of supported editors (see http://macromates.com)
- [Feature] Dialog for duplicated files lists all at once instead of consecutively asking
- [Feature] Filter field is now a standard search field