@@ -17,7 +17,9 @@
 - [Bugfix] Opening an URL linking to a file opens a browser window
 - [Bugfix] Changing the username of a newly created bookmark of a connected server might affect an existing bookmark of the same server but with a different username.
 - [Bugfix] Logging the response of 'LIST' (FTP)
-- [Bugfix] Don't write PASS to transcript (FTP)
+- [Bugfix] Selection of bookmark in connection dialog
+- [Bugfix] Performance issue in log view (thanks to Douglas Davidson)
+- [Feature] Live scrolling log view
 
 2.4b1
 - [Feature] Synchronization of files
